# AImaGenNFT

./: Manuel Batch64 CDP Project-AImaGenNFT_08012023.pptx  shell.nix
AImaGen/IPFS/: ipfs-upload-client.md  pin_to_ipfs.sh
AImaGen/StableDiffusion/: ImaGen.py
CryptoMaterial/addresses/: mintNFT.script  nft_minting.addr  operations.addr  operations.skey  operations.vkey
CryptoMaterial/plutusValidator/nftMint/: nftMint.plutus  nftMintRedeemer.json  scriptAddrNft.addr
PlutusValidator/nftMint/: cabal.project  nftMint.cabal
PlutusValidator/nftMint/plutusScripts/: nftMintRedeemer.json
PlutusValidator/nftMint/src/: NFTMint.hs  NFTMintDeploy.hs
VendingMachine/: vendingMachine.sh
