Cabal-Version:       2.4
Name:                NFTMint
Version:             0.1.0.0
Synopsis:            NFTMint cabal project
Author:              Emanuele Concotelli
Maintainer:          econcotelli@gmail.com
Build-Type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     NFTMint
                     , NFTMintDeploy
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
